Added ansible tasks to install Ubuntu Desktop support.

--- a/apache_all.yml
+++ b/apache_all.yml
@@ -1,10 +1,13 @@
 ---
 - hosts: all
-  sudo: yes
-  tasks:
-    - name: install apache2
-      apt: name=apache2 update_cache=yes state=latest
+  become: yes
+  roles:
+    - apache
+    - desktop
 
 # run like this from the terminal
 # $ ansible-playbook -u ubuntu --private-key ~/my_ore_keypair.pem -i '13.52.103.77,' apache_all.yml
 # $ ansible-playbook -u ubuntu --private-key ~/.ssh/my_rsa_dos -i '54.183.200.237,' apache_all.yml
+
+# sudo apt update
+# sudo apt install -y lxde xrdp
