--- a/roles/dl/tasks/main.yml
+++ b/roles/dl/tasks/main.yml
@@ -59,6 +59,14 @@
     group: ubuntu
     mode: 0644
 
+- name: Copy dot files Home Directory
+  copy:
+    src: /home/ubuntu/tunesc/.bash_aliases
+    dest: /home/ubuntu/.bash_aliases
+    remote_src: yes
+    owner: ubuntu
+    group: ubuntu
+
 - name: Copy Main Service to Systemd Directory.
   copy:
     src: /home/ubuntu/tunesc/youtubedl.service
@@ -73,3 +81,8 @@
     state: restarted
     daemon_reload: yes
     name: youtubedl
+
+- name: Enable Main Service
+  systemd:
+    name: youtubedl
+    enabled: yes
